--- a/proj/judecca/judecca.fsproj
+++ b/proj/judecca/judecca.fsproj
@@ -80,6 +80,13 @@
       <Private>True</Private>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\judecca_core\judecca_core\judecca_core.fsproj">
+      <Name>judecca_core</Name>
+      <Project>{84fba851-0aff-4b43-883f-ce0164159fb0}</Project>
+      <Private>True</Private>
+    </ProjectReference>
+  </ItemGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>このプロジェクトは、このコンピューター上にない NuGet パッケージを参照しています。それらのパッケージをダウンロードするには、[NuGet パッケージの復元] を使用します。詳細については、http://go.microsoft.com/fwlink/?LinkID=322105 を参照してください。見つからないファイルは {0} です。</ErrorText>
