--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ judecca/.idea/judecca.iml
 judecca/.idea/*
 tools/onnx_python/.idea/*
 judecca/.idea/workspace.xml
+data/squeezenet/model_op9.onnx
+judecca/.idea/workspace.xml
