全体が回るようになったが動いていない

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ data/squeezenet/
 data/bvlc_googlenet/model.onnx
 judecca/output/output.png
 judecca/output/liveness.dot
+rust_tools/target/debug/
+rust_tools/target/.rustc_info.json
